<resources>
    <string name="app_name">InClass09</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!--<string name="email">E Mail</string> -->
    <string name="choose_pass">Choose Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="curr_threads">Current Threads</string>
    <string name="add_thread">Add New Thread</string>
    <string name="msg">Message</string>
    <string name="name">Name</string>
    <string name="department">Department:</string>
    <string name="sis">SIS</string>
    <string name="cs">CS</string>
    <string name="bio">BIO</string>
    <string name="mood">Your Current Mood: </string>
    <string name="current_mood">Happy :D</string>
    <string name="submit">Submit</string>
    <string name="displayName">Name: </string>
    <string name="displayEmail">Email: </string>
    <string name="displayDept">Department: </string>
    <string name="displayMood">I AM </string>
    <string name="select_avatar">Select Your Avatar</string>
    <string name="phone">Phone</string>
    <string name="cnc">Create New Contact</string>
    <string name="logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
